force-app/main/default/objects/Promotions__c/Promotions__c.object-meta.xml
<CustomObject>
    <label>Promotion</label>
    <nameField>
        <label>Promotions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>