force-app/main/default/objects/Promotions__c/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <inlineHelpText>% of discount&apos;s dollar amount to be ignored when calculating commission.</inlineHelpText>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>