force-app/main/default/objects/Promotions__c/fields/Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Amount__c</fullName>
    <label>Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>