force-app/main/default/objects/Promotions__c/fields/Discounted_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Percentage__c</fullName>
    <label>Discounted Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>