force-app/main/default/objects/Promotions__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>