force-app/main/default/objects/Promotions__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>Promo code associated with this promotion.  Primarily for syncing to related proposal and Paradigm.</description>
    <inlineHelpText>For Paradigm</inlineHelpText>
    <label>Promo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>