force-app/main/default/objects/Promotions__c/validationRules/Discount_Unspecified.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Unspecified</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Discounted_Amount__c)  &amp;&amp;
 ISNULL(Discounted_Percentage__c)</errorConditionFormula>
    <errorMessage>Please enter a percentage discounted from product.</errorMessage>
</ValidationRule>