force-app/main/default/objects/Promotions__c/validationRules/Start_After_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_After_End</fullName>
    <active>true</active>
    <description>Start date cannot be after end date</description>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The promotion cannot end before it&apos;s started.</errorMessage>
</ValidationRule>